Addition of env prefix in shipment ID

--- a/resources/compose/activetransfer-dev/application.properties
+++ b/resources/compose/activetransfer-dev/application.properties
@@ -9,6 +9,7 @@ jdbcfunc.ActiveTransfer.connPoolAlias=wmat
 jdbcfunc.ActiveTransferArchive.connPoolAlias=wmat
 jdbcfunc.CentralUsers.connPoolAlias=wmat
 
+globalvariable.ENVIRONMENT.value=DEV
 
 settings.watt.server.ns.lockingMode=auto
 user.Administrator.password=manage
